[package]
name = "api_album"
version = "0.1.0"
authors = ["TuntematonSotilas"]
edition = "2018"

[dependencies]
actix-rt = "0.2.2"
actix-service = "0.4.1"
actix-web = "1.0.2"
actix-multipart = "0.1.2"
actix-cors = "0.1.0"
serde = "1.0.92"
serde_derive="1.0.92"
derive_more = "0.14.1"
chrono = "0.4.6"
jsonwebtoken = "6.0.0"
dotenv = "0.14.1"
futures = "0.1.27"
log = "0.4.6"
simplelog = "0.6.0"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
r2d2 = "0.8.5"
base64 = "0.10.1"
sha2 = "0.8.0"
rexif = "0.3.5"
image = "0.22.1"

[[bin]]
name = "api_album"
path = "main.rs"
